--- a/FaceTrain/FaceTrain/Base.lproj/Main.storyboard
+++ b/FaceTrain/FaceTrain/Base.lproj/Main.storyboard
@@ -22,15 +22,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l6k-ZT-MkM">
-                                <rect key="frame" x="160" y="462" width="54" height="30"/>
+                                <rect key="frame" x="76" y="590" width="54" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Camera"/>
                                 <connections>
                                     <action selector="cameraButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LHK-q0-89X"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FSs-mQ-ueK">
-                                <rect key="frame" x="87" y="138" width="200" height="200"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="front2" translatesAutoresizingMaskIntoConstraints="NO" id="FSs-mQ-ueK">
+                                <rect key="frame" x="0.0" y="28" width="375" height="319"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="upZ-MF-7MQ">
+                                <rect key="frame" x="235" y="602" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Detect"/>
+                                <connections>
+                                    <action selector="detect:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EyW-u7-d2V"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p6U-wp-yXf">
+                                <rect key="frame" x="137" y="408" width="100" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -38,11 +50,16 @@
                     </view>
                     <connections>
                         <outlet property="cameraButton" destination="l6k-ZT-MkM" id="22v-cA-uAc"/>
+                        <outlet property="faceImageView" destination="p6U-wp-yXf" id="gN8-xY-lUC"/>
                         <outlet property="personImageView" destination="FSs-mQ-ueK" id="dWN-31-Pfg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-190" y="78"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="front2" width="439" height="618"/>
+    </resources>
 </document>
