--- a/FaceTrain/FaceTrain/Base.lproj/Main.storyboard
+++ b/FaceTrain/FaceTrain/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                     <action selector="cameraButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LHK-q0-89X"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="front2" translatesAutoresizingMaskIntoConstraints="NO" id="FSs-mQ-ueK">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="gesh2" translatesAutoresizingMaskIntoConstraints="NO" id="FSs-mQ-ueK">
                                 <rect key="frame" x="0.0" y="28" width="375" height="319"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -60,6 +60,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="front2" width="439" height="618"/>
+        <image name="gesh2" width="1222" height="1276"/>
     </resources>
 </document>
